--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div id="header">
+    <p>Argentina Programa #YoProgramo</p>
+    <div id="header-right">
+        <i class="fa-brands fa-linkedin fa-2xl"></i>
+        <i class="fa-brands fa-github fa-2xl"></i>
+        <button>Iniciar sesión</button>
+    </div>
+</div>
