--- a/src/app/component/acerca-de/acerca-de.component.html
+++ b/src/app/component/acerca-de/acerca-de.component.html
@@ -1,1 +1,12 @@
-<p>acerca-de works!</p>
+<div id="acerca-de">
+    <div id="foto">
+    </div>
+    <div id="informacion">
+        <h1>Fabiana Jazmin Amato</h1>
+        <h3>Full Stack Developer Jr</h3>
+        <p><i class="fa-solid fa-calendar "></i> 29 años</p>
+        <p><i class="fa-solid fa-location-dot"></i> San Rafael, Mendoza.</p>
+        <p><i class="fa-solid fa-phone"></i> +54 9 11-33972393</p>
+        <p><i class="fa-sharp fa-solid fa-envelope"></i> proyectos.amato@gmail.com</p>
+    </div>
+</div>
