Se actualizaron los componentes existentes y se agregaron: experiencia y skills

--- a/src/app/component/acerca-de/acerca-de.component.html
+++ b/src/app/component/acerca-de/acerca-de.component.html
@@ -1,9 +1,11 @@
-<div id="acerca-de">
-    <div id="foto">
+<div id="acerca-de">    
+    <div id="photo">
+    </div>
+    <div id="name">
+        <h1>Fabiana Jazmin Amato</h1>
+        <h2>Full Stack Developer Jr</h2>
     </div>
     <div id="informacion">
-        <h1>Fabiana Jazmin Amato</h1>
-        <h3>Full Stack Developer Jr</h3>
         <p><i class="fa-solid fa-calendar "></i> 29 años</p>
         <p><i class="fa-solid fa-location-dot"></i> San Rafael, Mendoza.</p>
         <p><i class="fa-solid fa-phone"></i> +54 9 11-33972393</p>
