--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,6 +1,6 @@
 <div id="header">
-    <p>Argentina Programa #YoProgramo</p>
-    <div id="header-right">
+        <p><b>Argentina Programa #YoProgramo</b></p>
+    <div id="redes">
         <i class="fa-brands fa-linkedin fa-2xl"></i>
         <i class="fa-brands fa-github fa-2xl"></i>
         <button>Iniciar sesión</button>
