--- a/src/app/component/experiencia/experiencia.component.html
+++ b/src/app/component/experiencia/experiencia.component.html
@@ -1,1 +1,21 @@
-<p>experiencia works!</p>
+<h1>Experiencia laboral</h1>
+<div id="experiencia">
+    <img src="../../../assets/images/img-experiencias.png" alt="Mujer trabajando">
+    <div>
+        <div class="trabajo">
+            <h3>AUTONOMO</h3>
+            <p>09-2019 - Actualidad</p>
+            <p>Cadista - Dibujante en Autocad 2D</p>
+        </div>
+        <div class="trabajo">
+            <h3>ALFALINCE SA</h3>
+            <p>09-2018 - 08-2019</p>
+            <p>Administrativa</p>
+        </div>
+        <div class="trabajo">
+            <h3>ELECTROMITER SRL</h3>
+            <p>06-2016 - 07-2018</p>
+            <p>Cadista - Administrativa</p>
+        </div>
+    </div>
+</div>
