--- a/src/app/component/skills/skills.component.html
+++ b/src/app/component/skills/skills.component.html
@@ -1,1 +1,50 @@
-<p>skills works!</p>
+<div id="skills">
+    <div class="skill">
+        <img src="../../../assets/images/logo-git.png" alt="Logo Git">
+        <p>Git</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-github.png" alt="Logo GitHub">
+        <p>GitHub</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-html.png" alt="Logo HTML">
+        <p>HTML</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-css.png" alt="Logo CSS">
+        <p>CSS</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-javascript.png" alt="Logo JavaScript">
+        <p>JavaScript</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-typescript.png" alt="Logo TypeScript">
+        <p>TypeScript</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-angular.png" alt="Logo Angular">
+        <p>Angular</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-vuejs.png" alt="Logo Vue.js">
+        <p>Vue.js</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-mysql.png" alt="Logo MySQL">
+        <p>MySQL</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-java.png" alt="Logo Java">
+        <p>Java</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-springboot.png" alt="Logo Spring Boot">
+        <p>Spring Boot</p>
+    </div>
+    <div class="skill">
+        <img src="../../../assets/images/logo-python.png" alt="Logo Python">
+        <p>Python</p>
+    </div>
+</div>
