--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,8 +1,21 @@
-<div id="header">
-        <p><b>Argentina Programa #YoProgramo</b></p>
-    <div id="redes">
-        <i class="fa-brands fa-linkedin fa-2xl"></i>
-        <i class="fa-brands fa-github fa-2xl"></i>
-        <button>Iniciar sesión</button>
+<div id="componente">
+    <div id="header">
+        <p><b>Argentina Programa <p>#YoProgramo</p></b></p>
+        <nav>
+            <ul>
+                <li>Inicio</li>
+                <li>Sobre mi</li>
+                <li>Educacion</li>
+                <li>Tecnologias</li>
+                <li>Proyectos</li>
+                <li>Contacto</li>
+                <li><button>Iniciar sesión</button></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="body">
+        <h2>Mi portfolio</h2>
+        <h1>{{datos.nombre}}</h1>
+        <h3>{{datos.profesion}} <i class="fa-solid fa-pen-to-square" title="editar"></i></h3>
     </div>
 </div>
