--- a/src/app/component/acerca-de/acerca-de.component.css
+++ b/src/app/component/acerca-de/acerca-de.component.css
@@ -1,21 +1,23 @@
-h1 { font-size: 50px; }
+h2 {text-align: center;
+    margin-bottom: 50px;}
 
-i { margin: 10px; }
+img { height: 50vh}
 
-#acerca-de {
+p {width: 50%; line-height:25px;}
+
+#componente {
+    padding: 30px;
+    height: 100vh;
+}
+
+#sobre-mi {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly ;
+    height: 90vh;
     align-items: center;
-    padding: 20px;
-    background-color: #54BAB9;
-    color: white;
+    justify-content: space-evenly;
 }
 
-#acerca-de > div { padding: 10px 0; }
-
-#photo {
-    width: 200px;
-    height: 200px;
-    margin: 0 50px;
+#sobre-mi *{
+    padding: 50px;
 }
+
