--- a/src/app/component/acerca-de/acerca-de.component.html
+++ b/src/app/component/acerca-de/acerca-de.component.html
@@ -1,14 +1,10 @@
-<div id="acerca-de">    
-    <div id="photo">
-    </div>
-    <div id="name">
-        <h1>Fabiana Jazmin Amato</h1>
-        <h2>Full Stack Developer Jr</h2>
-    </div>
-    <div id="informacion">
-        <p><i class="fa-solid fa-calendar "></i> 29 años</p>
-        <p><i class="fa-solid fa-location-dot"></i> San Rafael, Mendoza.</p>
-        <p><i class="fa-solid fa-phone"></i> +54 9 11-33972393</p>
-        <p><i class="fa-sharp fa-solid fa-envelope"></i> proyectos.amato@gmail.com</p>
+<div id="componente">
+    <h2>Sobre mi</h2>
+    <div id="sobre-mi">
+        <img src="../../../assets/images/img-sobreMi.png" alt="Mujer trabajando">
+        <p>{{datos.sobreMi}}<br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum autem alias esse quam inventore quia cupiditate, quae vel adipisci ipsa dolorem reprehenderit voluptate magni quod magnam temporibus! Similique, est id.<br>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem consequatur placeat similique ipsum. Enim distinctio mollitia fugit excepturi laudantium dolores, sequi quia consequatur pariatur sunt est. Dolorum ullam vel vitae! <br>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur laboriosam ducimus facilis soluta impedit illo dignissimos doloremque repellat esse excepturi itaque molestias magnam in eius, accusamus alias quam omnis? Assumenda.</p> 
     </div>
 </div>
