Se modifico el estilo de los componentes y se conecto a la api

--- a/src/app/component/acerca-de/acerca-de.component.html
+++ b/src/app/component/acerca-de/acerca-de.component.html
@@ -1,10 +1,10 @@
-<div id="componente">
+<section>
     <h2>Sobre mi</h2>
     <div id="sobre-mi">
         <img src="../../../assets/images/img-sobreMi.png" alt="Mujer trabajando">
-        <p>{{datos.sobreMi}}<br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum autem alias esse quam inventore quia cupiditate, quae vel adipisci ipsa dolorem reprehenderit voluptate magni quod magnam temporibus! Similique, est id.<br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum autem alias esse quam inventore quia cupiditate, quae vel adipisci ipsa dolorem reprehenderit voluptate magni quod magnam temporibus! Similique, est id.<br>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem consequatur placeat similique ipsum. Enim distinctio mollitia fugit excepturi laudantium dolores, sequi quia consequatur pariatur sunt est. Dolorum ullam vel vitae! <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur laboriosam ducimus facilis soluta impedit illo dignissimos doloremque repellat esse excepturi itaque molestias magnam in eius, accusamus alias quam omnis? Assumenda.</p> 
     </div>
-</div>
+</section>
+    
