--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <app-header></app-header>
-<app-acerca-de></app-acerca-de>
-<app-skills></app-skills>
-<app-educacion></app-educacion>
-<app-proyectos></app-proyectos>
-
+<router-outlet></router-outlet>
+<app-footer></app-footer>
 
 
 
