--- a/src/app/component/educacion/educacion.component.css
+++ b/src/app/component/educacion/educacion.component.css
@@ -1,4 +1,13 @@
-h1 { margin: 20px; }
+h2 {
+    text-align: center;
+    margin-bottom: 50px
+}
+
+i {
+    margin: auto 10px;
+    color: coral;
+    cursor: pointer;
+}
 
 p { font-style:italic ;}
 
@@ -7,16 +16,18 @@ img {
     margin-right: 30px;
 }
 
-#educacion {
+#estudios {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #54BAB9;
-    color: white;
+    justify-content: center;
+    flex-wrap: wrap;
 }
+
 
 .estudio {
     display: flex;
     align-items: center;
-    padding: 50px 10px;
+    padding: 30px;
+    border: 1px solid white;
+    width: 50%;
+    margin: 10px;
 }
