Se modificaron estilos y se termino el login

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -2,12 +2,12 @@
     <p><b>Argentina Programa <p>#YoProgramo</p></b></p>
     <nav>
         <ul>
-            <li routerLink="/inicio" aria-current="page">Inicio</li>
-            <li routerLink="/sobre-mi" aria-current="page">Sobre mi</li>
-            <li routerLink="/estudios" aria-current="page">Educacion</li>
-            <li routerLink="/tecnologias" aria-current="page">Tecnologias</li>
-            <li routerLink="/proyectos" aria-current="page">Proyectos</li>
-            <li routerLink="/contacto" aria-current="page">Contacto</li>
+            <li routerLink="/inicio" ariaCurrentWhenActive="page"  routerLinkActive="active-link">Inicio</li>
+            <li routerLink="/sobre-mi" ariaCurrentWhenActive="page"  routerLinkActive="active-link">Sobre mi</li>
+            <li routerLink="/estudios"ariaCurrentWhenActive="page"  routerLinkActive="active-link">Educacion</li>
+            <li routerLink="/tecnologias" ariaCurrentWhenActive="page"  routerLinkActive="active-link">Tecnologias</li>
+            <li routerLink="/proyectos" ariaCurrentWhenActive="page"  routerLinkActive="active-link">Proyectos</li>
+            <li routerLink="/contacto" ariaCurrentWhenActive="page"  routerLinkActive="active-link">Contacto</li>
             <li><app-login></app-login></li>
         </ul>
     </nav>
