--- a/src/app/component/inicio/inicio.component.css
+++ b/src/app/component/inicio/inicio.component.css
@@ -19,10 +19,21 @@ h1 {
 h3 {
     font-size: 40px;
     color:#54BAB9;
+    width: 100%
 }
 
 i {
     color:coral;
     margin: auto 15px;
     cursor: pointer
+}
+
+form {margin: 20px 0}
+
+form * {margin: 10px}
+
+input { 
+    width: 340px;
+    height: 30px;
+    font-size: 20px
 }
