--- a/src/app/component/acerca-de/acerca-de.component.css
+++ b/src/app/component/acerca-de/acerca-de.component.css
@@ -1,17 +1,43 @@
 h2 {text-align: center;
     margin-bottom: 50px;}
 
-img { height: 50vh}
+i {
+    margin: auto 10px;
+    color: coral;
+    cursor: pointer
+}
 
-p {width: 50%; line-height:25px;}
+img { height: 45vh}
+
+p {
+    line-height:25px;
+    padding: 20px
+}
+
+#editImg {
+    display:flex;
+    margin: 20px auto
+}
+
+#editImg * {margin-left: 20px;}
+
+input {width: 100%}
+
+textarea {width: 100%;
+    height: 60px;
+    margin: auto 20px}
+
+button {margin: 20px; width: 100%;}
 
 #sobre-mi {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-}
-
-#sobre-mi *{
+    justify-content: center;
     padding: 50px;
 }
 
+#imagen {
+    display: flex;
+    justify-content: center;
+    width: 100%
+}
